Lots of edits and fixes

--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -37,7 +37,7 @@ bibliography: 2024-05-07-dpi-fsvi.bib
 toc:
   - name: Introduction
   - name: "Background: Information-Theoretic Notation"
-  - name: Data Processing Inequality
+  - name: "Data Processing Inequality"
     subsections:
       - name: "Example: Image Processing Pipeline"
       - name: "Example: Supervised Learning"
@@ -116,19 +116,19 @@ _styles: >
     border-left-color: #2bc039;
   }
   html[data-theme='dark'] d-article .box-note {
-    background-color: #555555;
+    background-color: #333333;
     border-left-color: #2980b9;
   }
   html[data-theme='dark'] d-article .box-warning {
-    background-color: #7f7f00;
+    background-color: #3f3f00;
     border-left-color: #f1c40f;
   }
   html[data-theme='dark'] d-article .box-error {
-    background-color: #800000;
+    background-color: #300000;
     border-left-color: #c0392b;
   }
   html[data-theme='dark'] d-article .box-important {
-    background-color: #006600;
+    background-color: #003300;
     border-left-color: #2bc039;
   }
   html[data-theme='dark'] d-article blockquote {
@@ -443,10 +443,10 @@ Let's move on and consider the KL data processing inequality.
 
 ## 🥬 Data Processing Inequality
 
-A similar DPI can be expressed for different distributions $$\pof{x}$$ and $$\qof{x}$$ and the KL divergence between them.
-It states that if we evolve two distributions using the same transition function, they cannot become less similar. The KL divergence is sometimes also referred to as "relative entropy", so we could also call this the "*relative data processing inequality*". 
+A similar DPI can be expressed for different distributions $$\pof{x}$$ and $$\qof{x}$$ of the same random variable and the KL divergence between them.
+This DPI states that if we evolve two distributions using the same *transition function*, they cannot become less similar. The KL divergence is sometimes also referred to as "relative entropy", so we could also call this the "*relative data processing inequality*". 
 
-This can be formalized for distributions $$\pof{x}$$ and $$\qof{x}$$ and a stochastic transition function $$X \overset{\fof{y \given x}}{\longrightarrow} Y$$:
+This can be formalized for distributions $$\pof{x}$$ and $$\qof{x}$$ and a stochastic transition function $$X \overset{\fof{y \given x}}{\longrightarrow} Y$$. Here, we use that such a stochastic mapping $$Y = \fof{X}$$ is equivalent to having a probability (density) $$\fof{y \given x}$$:
 
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\pof{Y}}{\qof{Y}},
@@ -458,11 +458,11 @@ $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\E{\pof{x}}{\fof{Y \given x}}}{\E{\qof{x}}{\fof{Y \given x}}}.
 $$
 
-Thomas and Cover describe this in their book [Elements of Information Theory](https://www.wiley.com/en-us/Elements+of+Information+Theory%2C+2nd+Edition-p-9780471241959) as "relative entropy never increases" and relate it to the second law of thermodynamics.
+In their book [Elements of Information Theory](https://www.wiley.com/en-us/Elements+of+Information+Theory%2C+2nd+Edition-p-9780471241959), Thomas and Cover describe this as "relative entropy never increases" and relate it to the second law of thermodynamics.
 
 ### Example: Comparing Image Distributions
 
-As another example, let:
+As an example, let:
 
 * $$\pof{x}$$ be the true distribution of images in a dataset;
 * $$\qof{x}$$ be a generative model that tries to mimic $$\pof{x}$$; and
@@ -470,14 +470,13 @@ As another example, let:
 
 Then $$\pof{y}$$ and $$\qof{y}$$ will be more difficult to distinguish after the thresholding operation than $$\pof{x}$$ and $$\qof{x}$$. Converting to black and white images has lost information that could help distinguish the real and generated distributions.
 
-This provides some intuition for why the 🥬 divergence between distributions decreases under a shared stochastic mapping, as formalized by the 🥬 data processing inequality. Processing through $$\fof{y \given x}$$ makes the distributions harder to tell apart.
+This provides some intuition for why the KL divergence between distributions decreases under a shared stochastic mapping, as formalized by the KL data processing inequality. Processing through $$\fof{y \given x}$$ makes the distributions harder to tell apart.
 
 ### Counter-Example: Bayesian Inference
 
-It might be inviting to think that this data processing inequality also applies to Bayesian inference (updating the model parameters based on new evidence). Then one could argue that if two agents start with different prior beliefs but update based on the same evidence, their posterior beliefs will become more similar. However, this intuition is flawed: the data processing inequality does not apply to Bayesian inference.
-Let's walk through why.
+It might be inviting to think that this data processing inequality also applies to Bayesian inference, that is updating the model parameters based on new evidence. Then, we could argue that if two agents start with different prior beliefs but update based on the same evidence, their posterior beliefs will become more similar. However, this intuition is flawed: the data processing inequality does not apply to Bayesian inference.
 
-Let:
+Let's walk through why. Consider:
 
 * $$\pof{\w}$$ be an agent's prior belief;
 * $$\qof{\w}$$ be another agent's different prior;
@@ -486,19 +485,37 @@ Let:
 
 The priors $$\pof{\w}$$ and $$\qof{\w}$$ may have large divergence, representing very different initial beliefs. However, when conditioning on the same data $$x$$, the KL divergence between $$\pof{\w \given x}$$ and $$\qof{\w \given x}$$ could increase or decrease---the data processing inequality does not give us any guarantee.
 
-This is because $$\pof{\w}$$ and $$\qof{\w}$$ are not evolving under the same stochastic mapping. Rather, each prior is mapped to its respective posterior via Bayes' rule, which operates differently on $$\opp$$ and $$\opq$$.
+This is because $$\pof{\w}$$ and $$\qof{\w}$$ are not evolving under the same stochastic mapping. Rather, each prior is mapped to its respective posterior via Bayes' rule, which operates differently on $$\opp$$ and $$\opq$$:
 
-The correct intuition is that observing the same data $$x$$ does not necessarily bring the posterior beliefs closer together---their divergence depends on the interplay between the specific priors and likelihoods. The data processing inequality does not directly apply to this Bayesian updating scenario.
+$$
+\begin{align*}
+\pof{\w \given x} &= \frac{\pof{x \given \w}}{\pof{x}} \, \pof{\w}\\
+\qof{\w \given x} &= \frac{\qof{x \given \w}}{\qof{x}} \, \qof{\w}.
+\end{align*}
+$$
+
+Even assuming that both agents have the same internal model, that is they use the same likelihood $$\pof{x \given \w} = \qof{x \given \w}$$, the priors $$\pof{\w}$$ and $$\qof{\w}$$ will still influence the posterior distributions differently because they lead to different evidence terms $$\pof{x}$$ and $$\qof{x}$$:
+
+$$
+\begin{align*}
+\pof{x} &= \E{\pof{\w}}{\pof{x \given \w}}\\
+\qof{x} &= \E{\qof{\w}}{\qof{x \given \w}}.
+\end{align*}
+$$
+
+Thus, the correct intuition is that observing the same data $$x$$ does not necessarily bring the posterior beliefs closer together---they depend on the interplay between their specific priors and likelihoods. The data processing inequality does not directly apply to this Bayesian updating scenario:
 
 $$
 \Kale{\qof{\W}}{\pof{\W}} {\color{red}{\not\ge}} \Kale{\qof{\W \given \mathcal{D}}}{\pof{\W \given \mathcal{D}}},
 $$
 
-This counterexample highlights the importance of precisely understanding the assumptions underlying conceptual principles like the DPI. While the DPI provides insight about information dynamics in many cases, it does not universally apply, as exemplified here by Bayesian updating under different priors.
+This counterexample highlights the importance of precisely understanding the assumptions underlying conceptual principles like the DPI. While the DPI provides insight about information dynamics in many cases, it does not universally apply, as exemplified here by Bayesian updating under different priors. As always, bear in mind that:
 
-<aside class="l-body box-note">
-Identifying counterexamples sharpens our comprehension of the true meanings and limitations of information-theoretic inequalities.
+<aside class="l-body box-note" markdown="1">
+Identifying counterexamples sharpens our comprehension of the true meaning and limitations of information-theoretic inequalities.
 </aside>
+
+As we currently also seem to experience a world of increasing polarization, this counterexample might also serve as a reminder that different priors can lead to different beliefs, even when observing the same evidence. This is a fundamental aspect of Bayesian inference and the scientific method.
 
 ### Proofs of the 🥬 DPI
 
@@ -508,7 +525,7 @@ We will prove this inequality in two different ways. First, we will develop a "b
 
 If $$\opp$$ does not have support in $$\opq$$, the inequality is trivially true because then $$\Kale{\pof{Y}}{\qof{Y}}=\infty$$.
 
-Thus, now assume that $$\opp$$ has support in $$\opq$$. Then, we can brute-force from the cross-entropy:
+Thus, let's now assume that $$\opp$$ has support in $$\opq$$. Then, we can brute-force using the definitions, starting from the cross-entropy:
 
 $$
 \begin{aligned}
@@ -523,14 +540,20 @@ $$
 \end{aligned}
 $$
 
-where we have used **(1)** the cross-entropy of a distribution with itself is just the entropy, **(2)** the cross-entropy is convex and we can apply Jensen's inequality, **(3)** the RHS side of the cross-entropy does not depend on $$Y$$ and we can trivially marginalize it out, and **(4)** the definition of the Kullback-Leibler divergence as (unnormalized) cross-entropy of a fraction.
+where we have used **(1)** that the cross-entropy of a distribution with itself is just the entropy, **(2)** that the cross-entropy is convex and we can apply Jensen's inequality, **(3)** that the RHS side of the cross-entropy does not depend on $$Y$$ and we can trivially marginalize it out, and **(4)** that the definition of the Kullback-Leibler divergence is equivalent an (unnormalized) cross-entropy over a fraction.
 
 This makes it difficult to extract the case for equality, however.
 
 #### Equality Case
 
+We have only one inequality in above proof, and it stems from applying Jensen's inequality. Remembering the equality case for Jensen's inequality, we recall:
+
 <aside class="l-body box-note" markdown="1">
-We have equality in Jensen's inequality $$\E{\pof{x}}{g(x)} \le g(\E{\pof{x}}{x})$$ when $$g$$ is affine (commutes with addition) where $$\pof{x}$$ has support. A special case is when $$g(x)$$ is constant almost everywhere in the support of $$\pof{x}$$.
+We have equality in Jensen's inequality:
+
+$$g(\E{\pof{x}}{f(x)}) \le \E{\pof{x}}{g(f(x))},$$
+
+iff $$g$$ is linear (commutes with addition)<d-footnote>Specifically, linear in the convex hull of the support of $\pof{x}$.</d-footnote> or $$f(x)$$ is constant.
 </aside>
 
 For **(2)**, this is sadly slightly more complex than it might seem on first glance. 
@@ -540,7 +563,7 @@ $$
 \CrossEntropy{\pof{Y}}{\E{\pof{x \given Y}}{\frac{\qof{x}}{\pof{x}}}} = \E{\pof{y}}{-\log \E{\pof{x \given y}}{\frac{\qof{x}}{\pof{x}}}}.
 $$
 
-We take an expectation over $$\pof{y}$$, so we need to look at almost all $$\pof{x \given y} \not= 0$$ for different almost all $$\pof{y}$$ separately to consider equality. $$-\log x$$ is strictly convex, so we need $$F = \frac{\qof{X}}{\pof{X}}$$ to be constant almost everywhere in the support of $$\pof{x \given y}$$ for any fixed $$y$$. Then we have equality in Jensen's inequality.
+We take an expectation over $$\pof{y}$$, so we need to look at almost all $$\pof{x \given y} \not= 0$$ for (almost all) $$\pof{y} \not= 0$$ separately to consider equality. $$-\log x$$ is strictly convex---and thus not linear---so we need $$f(x) = \frac{\qof{X}}{\pof{X}}$$ to be constant for any fixed $$y$$ with $$\pof{y} \not= 0$$---only then have we equality in Jensen's inequality.
 
 In the following, I will limit myself to the discrete case to avoid having to deal with measure theory<d-footnote>I currently don't have a good 'toolbox' to express simple ideas cleanly in measure theory. I'm working on it.</d-footnote>.
 To obtain equality, for all $$y$$ with $$\pof{y} \not= 0$$ (i.e. we have support) and for all $$x_1, x_2$$ with $$\pof{x_1 \given y}, \pof{x_2 \given y} \not= 0$$, we need $$\frac{\qof{x_1}}{\pof{x_1}} = \frac{\qof{x_2}}{\pof{x_2}}$$. 
@@ -559,15 +582,20 @@ If for any $$x$$ there are multiple $$y$$, e.g. $$y_1, y_2$$ for which $$\pof{x 
 
 As an example, at the simplest, if this is the case for all $$y$$, then $$C_y = 1$$ constant.
 
-#### Simple & Elegant Proof
+As a side-note, this is a great reason why we often require full support for distributions as we then can avoid these piecewise constant factors (and the headaches they might cause).
+
+#### Simpler Elegant Proof
 
 Thomas and Cover provide a beautifully simple proof:
 
 <aside class="l-body box-note" markdown="1">
-Using the chain rule of the 🥬 divergence:
+Using the chain rule of the KL divergence:
 
 $$
-\Kale{\pof{X, Y}}{\qof{X, Y}} = \Kale{\pof{X}}{\qof{X}} + \Kale{\pof{Y \given X}}{\qof{Y \given X}},
+\begin{aligned}
+\Kale{\pof{X, Y}}{\qof{X, Y}} &= \Kale{\pof{X}}{\qof{X}} \\
+&+ \Kale{\pof{Y \given X}}{\qof{Y \given X}},
+\end{aligned}
 $$
 
 and its symmetry, we have:
@@ -605,7 +633,7 @@ For a given $$y$$ with $$\pof{y} \not=0$$, for the equality case, we see that fo
 
 As another example, if $$\fof{y \given x} \not=0$$ (has full support) for all possible $$x$$, for the equality case we have $$\pof{x} = \qof{x}$$.
 
-Compared to the previous equality case we went a bit deeper and rewrote the conditions to consider the ratios between $$x$$ and $$y$$. Note we could have shown the same thing in the "brute-force" proof, too. 
+Compared to the previous equality case, we went a bit deeper and rewrote the conditions to consider the ratios between $$x$$ and $$y$$. Note we could have shown the same thing in the "brute-force" proof, too. 
 
 Altogether, we have see that both $$x$$ and $$y$$ are modulated by the same constant factor between $$\pof{\cdot}$$ and $$\qof{\cdot}$$. Essentially, this tells us that we could split our support into unconnected sub-domains and examine each individually for the equality case.
 
@@ -614,14 +642,14 @@ One technicality is the question of what $$\pof{y \given x}$$ is when $$\pof{x} 
 
 Previously, we said that we want $$\pof{y \given x} = \fof{y \given x}$$ and $$\qof{y \given x} = \fof{y \given x}$$, but, given the above, we only need these equalities to hold where $$\pof{x} \not= 0$$ and $$\qof{x} \not= 0$$, respectively.
 
-On the other hand, $$\pof{x} = 0$$ does imply $$\pof{x \given y} = 0$$.
+On the other hand, $$\pof{x} = 0$$ still implies $$\pof{x \given y} = 0$$.
 </aside>
 
 ### Overall Statement 
 We have the following overall statement:
 
 <aside class="l-body box-warning" markdown="1">
-Given $$\pof{x}$$ and $$\qof{x}$$ and shared transition function $$\fof{y \given x}$$ for the model $$X \rightarrow Y$$, the relative 🥬 data processing inequality is:
+Given $$\pof{x}$$ and $$\qof{x}$$ and shared transition function $$\fof{y \given x}$$ for the model $$X \rightarrow Y$$, the relative KL data processing inequality is:
 
 $$
 \Kale{\pof{X}}{\qof{X}} \ge \Kale{\pof{Y}}{\qof{Y}},
@@ -629,9 +657,7 @@ $$
 
 When $$\pof{x} \ll \qof{x}$$, we have equality when $$\pof{X \given Y} = \qof{X \given Y}$$.
 </aside>
-($$\pof{x} \ll \qof{x}$$ means that $$\qof{x} > 0$$ implies $$\pof{x} > 0$$, so the 🥬 divergence is not $$\infty$$.)
-
-More precisely, for $$\pof{x} \ll \qof{x}$$, we have equality when:
+($$\pof{x} \ll \qof{x}$$ means that $$\qof{x} > 0$$ implies $$\pof{x} > 0$$, so the KL divergence is not $$\infty$$.) But more precisely, for $$\pof{x} \ll \qof{x}$$, we have equality when:
 
 $$
 \forall y, \pof{y} \not= 0 \exists C_y \in \mathbb{R}_{> 0} \forall x, \fof{y \given x}\not=0\colon \pof{x} = C_y \, \qof{x}.
@@ -639,13 +665,13 @@ $$
 
 ## Other Data Processing Inequalities
 
-Now, we can use this to derive a few additional results and also to close the circle to the original data processing inequality.
+Now, we can use these ideas to derive a few additional results and even close the circle to the original data processing inequality.
 
 ### Jensen-Shannon Divergence
 
-The KL (🥬) divergence is not a metric. The triangle inequality does not hold, and it is not symmetric.
+The KL divergence is not a metric: the triangle inequality does not hold, and it is not symmetric.
 
-We can symmetrize it to obtain the [Jensen-Shannon divergence (JSD)](https://en.wikipedia.org/wiki/Jensen%E2%80%93Shannon_divergence). The JSD is defined as the mean of the two 🥬 divergences of the two distributions from their average. It essentially makes the 🥬 divergence symmetric:
+However, we can symmetrize it to obtain the [Jensen-Shannon divergence (JSD)](https://en.wikipedia.org/wiki/Jensen%E2%80%93Shannon_divergence). The JSD is defined as the mean of the two KL divergences of the two distributions from their average. In essence, it makes the KL divergence symmetric:
 
 $$
 \begin{aligned}
@@ -656,7 +682,7 @@ $$
 
 Similar approaches can be used to "symmetrize" other concepts; for example matrices: $$\frac{1}{2} A + \frac{1}{2} A^T$$ is also symmetric by construction for any matrix $$A$$.
 
-The square root of the Jensen-Shannon divergence is symmetric and satisfies the triangle inequality---it is a metric: the *Jensen-Shannon distance*.
+The JSD is still not a metric, but the square root of the Jensen-Shannon divergence is symmetric and satisfies the triangle inequality and gives us the *Jensen-Shannon distance*, a metric.
 
 ### JSD-DPI
 
@@ -666,13 +692,13 @@ We can also obtain a data processing inequality for the Jensen-Shannon divergenc
 Given $$\pof{x}$$ and $$\qof{x}$$ and shared transition function $$\fof{y \given x}$$ for the model $$X \rightarrow Y$$, the Jensen-Shannon divergence data processing inequality is:
 
 $$
-\JSD{\pof{X}}{\qof{X}} \ge \JSD{\pof{Y}}{\qof{Y}}.
+\JSD{\pof{X}}{\qof{X}} \ge \JSD{\pof{Y}}{\qof{Y}},
 $$
 
-We have equality exactly when $$\pof{x \given y} = \qof{x \given y}$$ almost everywhere.
+with equality exactly when $$\pof{x \given y} = \qof{x \given y}$$ almost everywhere.
 </aside>
 
-The proof uses the 🥬 data processing inequality:
+The proof uses the KL data processing inequality:
 
 $$
 \begin{aligned}
@@ -693,14 +719,14 @@ $$
 \end{aligned}
 $$
 
-Finally, $$\pof{x}, \qof{x} \ll \fof{x}$$, and the equality condition of the 🥬 data processing inequality gives us:
+Finally, $$\pof{x}, \qof{x} \ll \fof{x}$$, and the equality condition of the KL data processing inequality gives us:
 
 $$
 \begin{aligned}
 &\Kale{\pof{X \given Y}}{\fof{X \given Y}} = 0 &\\
-&\Kale{\qof{X \given Y}}{\fof{X \given Y}} = 0 &\\
-\implies &\pof{x \given y} = \fof{x \given y} \land \qof{x \given y} = \fof{x \given y}& \forall x,y \\
-\implies &\pof{x \given y} = \qof{x \given y}& \forall x,y.
+\land \quad &\Kale{\qof{X \given Y}}{\fof{X \given Y}} = 0 &\\
+\iff &\pof{x \given y} = \fof{x \given y} \land \qof{x \given y} = \fof{x \given y}& \forall x,y \\
+\iff &\pof{x \given y} = \qof{x \given y}& \forall x,y.
 \end{aligned}
 $$
 
@@ -721,7 +747,7 @@ $$
 \JSD{\pof{X}}{\qof{X}} = \MIof{X;Z}.
 $$
 
-This follows from rewriting the mutual information as a 🥬 divergence:
+This follows from rewriting the mutual information as a KL divergence:
 
 $$
 \begin{aligned}
@@ -744,30 +770,26 @@ $$
 \end{aligned}
 $$
 
-where $$(1)$$ follows from the 🥬 data processing inequality.
+where $$(1)$$ follows from the KL data processing inequality.
 
-This is just the data processing inequality we presented initially.
+This is just the data processing inequality we presented initially. We have gone full circle!
 
-The equality gap (*Jensen gap*) is $$\Kale{\fof{X \given Y, Z}}{\fof{X \given Y}}$$. We have equality when:
+The equality gap (*Jensen gap*) is $$\Kale{\fof{X \given Y, Z}}{\fof{X \given Y}}$$, and we have equality when:
 
 $$
 \begin{aligned}
 \Kale{\fof{X \given Y, Z}}{\fof{X \given Y}} &= 0\\
-\implies \MIof{X;Z \given Y} &= 0.
+\iff \MIof{X;Z \given Y} &= 0.
 \end{aligned}
 $$
 
-This is exactly when $$X$$ is independent of $$Z$$ given $$Y$$. (Then $$Y$$ is a sufficient statistic.)
-
-**Summary.** We have shown that we can derive the data processing inequality using the 🥬 data processing inequality.
+This is exactly when $$X$$ is independent of $$Z$$ given $$Y$$. ($$Y$$ is a sufficient statistic in that case.)
 
 ## Function-Space Variational Inference
 
-So far, we explored the data processing inequality and its applications in information theory. 
+So far we've explored the foundational aspects of the data processing inequality (DPI) and its extended forms, in particular the KL data processing inequality. Through detailed derivations and intuitive examples, we've demonstrated how these inequalities can be applied, emphasizing their significance and limitations. Specifically, we've shown how the KL data processing inequality relates to the reduction in information as data is processed. The examples and counterexample have hopefully demonstrated the nuances of applying these inequalities in different contexts.
 
-Specifically, we provided derivations and explanations for both the original data processing inequality as well as the 🥬 data processing inequality and related DPIs, emphasizing their significance and limitations. The examples and counterexample hopefully demonstrate the nuances of applying these inequalities in different contexts.
-
-By understanding the foundations and limitations of the data processing inequality, we can leverage its insights to understand function-space variational inference.
+This exploration sets the stage for diving into function-space variational inference and building up a robust understanding of it, leveraging the insights gained about the DPI and its implications in Bayesian deep learning.
 
 ### Problem Setting & Notation
 
